@@ -3943,6 +3943,7 @@ GEN     polresultantext0(GEN x, GEN y, long v);
 GEN     polresultantext(GEN x, GEN y);
 GEN     prime_fact(GEN x);
 GEN     vec_Q_primpart(GEN M);
+GEN     vecprod(GEN v);
 
 /* polarit3.c */
 
