@@ -375,6 +375,8 @@ od(0, 18446744073709551629); Mod(7, 18446744073709551629), Mod(8, 1844674407
   ***   at top-level: vecsum(1)
   ***                 ^---------
   *** vecsum: incorrect type in vecsum (t_INT).
+1
+6
   ***   at top-level: 1~
   ***                 ^--
   *** _~: incorrect type in gtrans (t_INT).
@@ -456,4 +458,4 @@ Vecsmall([2, 2, 0, -4, -10])
 
 [1 2 3]
 
-Total time spent: 32
+Total time spent: 104
