@@ -100,6 +100,8 @@ vecsum([])
 vecsum([2])
 vecsum(primes(4))
 vecsum(1)
+vecprod([])
+vecprod([1,2,3])
 1~
 
 content([])
